# x-delete-all

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tweets-export.json  x-delete-all.spec
.github/workflows/: build_release.yml  ci.yml  release.yml
assets/: README_assets.md  icon.icns
scripts/: build_briefcase.sh  build_pyinstaller.sh  build_wheel.sh  build_windows_exe.bat  install.bat  install.sh  license_tool.py
tests/: test_db.py  test_gui_smoke.py  test_storage.py  test_xapi.py
x_delete_all/: __init__.py  auth.py  cli.py  db.py  gui.py  license.py  storage.py  xapi.py
x_delete_all.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
